# libeq

./: .envrc  .gitignore  Cargo.toml  README.md  README.tpl  flake.nix
.github/workflows/: ci.yml  release.yml
crates/libeq_archive/: Cargo.toml  LICENSE  README.md
crates/libeq_archive/src/: crc.rs  error.rs  lib.rs  new_write.rs  read.rs  write.rs
crates/libeq_pfs/: .gitignore  Cargo.toml  FORMAT.md  README.md
crates/libeq_pfs/src/: crc.rs  error.rs  lib.rs  read.rs  write.rs
crates/libeq_wld/: Cargo.toml  README.md  README.tpl
crates/libeq_wld/docs/: README.md
crates/libeq_wld/src/: lib.rs
crates/libeq_wld/src/parser/: error.rs  mod.rs  strings.rs
crates/libeq_wld/src/parser/fragments/: actor.rs  actor_def.rs  alternate_mesh.rs  ambient_light.rs  blit_sprite.rs  blit_sprite_def.rs  blit_sprite_definition.rs  blit_sprite_reference.rs  bm_info.rs  bm_info_rtk.rs  bsp_region.rs  bsp_tree.rs  camera.rs  camera_reference.rs  default_palette_file.rs  directional_light.rs  dm_rgb_track.rs  dm_rgb_track_def.rs  dm_sprite.rs  dm_sprite_def.rs  dm_sprite_def_2.rs  dm_track.rs  dm_track_def.rs  dm_track_def_2.rs  first.rs  four_d_sprite.rs  four_d_sprite_def.rs  global_ambient_light_def.rs  hierarchical_sprite.rs  hierarchical_sprite_def.rs  light.rs  light_def.rs  light_info.rs  light_source.rs  light_source_reference.rs  material.rs  material_def.rs  material_list.rs  material_palette.rs  mesh.rs  (+48 more)
crates/libeq_wld/src/parser/fragments/common/: encoded_filename.rs  location.rs  mod.rs  render_info.rs
fixtures/: gequip.wld  gfaydark.s3d  gfaydark.wld  gfaydark_chr.wld  gfaydark_obj.wld  lights.wld  objects.wld
fixtures/fragments/gequip/: 0000-0x03.frag  0001-0x04.frag  0003-0x30.frag  0004-0x31.frag  0005-0x2c.frag  0006-0x12.frag  0007-0x13.frag  0008-0x12.frag  0009-0x13.frag  0010-0x12.frag  0011-0x13.frag  0012-0x2d.frag  0013-0x10.frag  0014-0x03.frag  0015-0x04.frag  0017-0x30.frag  0018-0x03.frag  0019-0x04.frag  0020-0x05.frag  0021-0x30.frag  0022-0x31.frag  0023-0x2c.frag  0024-0x03.frag  0025-0x04.frag  0027-0x30.frag  0028-0x03.frag  0029-0x04.frag  0031-0x30.frag  0032-0x31.frag  0033-0x2c.frag  0035-0x14.frag  0036-0x03.frag  0037-0x04.frag  0039-0x26.frag  0040-0x03.frag  0041-0x03.frag  0042-0x03.frag  0043-0x03.frag  0044-0x04.frag  0045-0x05.frag  (+1987 more)
fixtures/fragments/gequip_beta/: 0121-0x2e.frag  0567-0x2c.frag  0652-0x12.frag
fixtures/fragments/gfaydark/: 0001-0x03.frag  0002-0x04.frag  0003-0x05.frag  0004-0x30.frag  0005-0x03.frag  0006-0x04.frag  0007-0x05.frag  0008-0x30.frag  0009-0x03.frag  0010-0x04.frag  0011-0x05.frag  0012-0x30.frag  0013-0x03.frag  0014-0x04.frag  0015-0x05.frag  0016-0x30.frag  0017-0x03.frag  0018-0x04.frag  0019-0x05.frag  0020-0x30.frag  0021-0x03.frag  0022-0x04.frag  0023-0x05.frag  0024-0x30.frag  0025-0x03.frag  0026-0x04.frag  0027-0x05.frag  0028-0x30.frag  0029-0x03.frag  0030-0x04.frag  0031-0x05.frag  0032-0x30.frag  0033-0x03.frag  0034-0x04.frag  0035-0x05.frag  0036-0x30.frag  0037-0x03.frag  0038-0x04.frag  0039-0x05.frag  0040-0x30.frag  (+4604 more)
fixtures/fragments/gfaydark_chr/: 0000-0x03.frag  0001-0x04.frag  0003-0x30.frag  0004-0x03.frag  0007-0x30.frag  0008-0x03.frag  0009-0x04.frag  0011-0x30.frag  0012-0x03.frag  0013-0x04.frag  0015-0x30.frag  0016-0x03.frag  0017-0x04.frag  0018-0x05.frag  0019-0x30.frag  0020-0x03.frag  0021-0x04.frag  0023-0x30.frag  0024-0x03.frag  0025-0x04.frag  0027-0x30.frag  0028-0x03.frag  0029-0x04.frag  0031-0x30.frag  0032-0x03.frag  0033-0x04.frag  0035-0x30.frag  0036-0x03.frag  0037-0x04.frag  0038-0x05.frag  0039-0x30.frag  0040-0x03.frag  0041-0x04.frag  0043-0x30.frag  0044-0x03.frag  0045-0x04.frag  0047-0x30.frag  0048-0x03.frag  0049-0x04.frag  0050-0x05.frag  (+9335 more)
fixtures/fragments/gfaydark_obj/: 0003-0x30.frag  0004-0x03.frag  0005-0x04.frag  0007-0x30.frag  0008-0x31.frag  0009-0x36.frag  0011-0x14.frag  0012-0x03.frag  0013-0x04.frag  0014-0x05.frag  0015-0x30.frag  0017-0x04.frag  0019-0x30.frag  0020-0x03.frag  0021-0x04.frag  0023-0x30.frag  0024-0x31.frag  0025-0x36.frag  0026-0x2d.frag  0027-0x14.frag  0028-0x03.frag  0029-0x04.frag  0030-0x05.frag  0031-0x30.frag  0032-0x03.frag  0033-0x04.frag  0035-0x30.frag  0036-0x31.frag  0037-0x36.frag  0039-0x14.frag  0041-0x04.frag  0042-0x05.frag  0043-0x30.frag  0044-0x03.frag  0045-0x04.frag  0047-0x30.frag  0048-0x31.frag  0049-0x36.frag  0051-0x14.frag  0052-0x03.frag  (+922 more)
fixtures/fragments/global_chr/: 0177-0x36.frag  0556-0x2c.frag
fixtures/fragments/lights/: 0000-0x1b.frag  0002-0x28.frag  0003-0x1b.frag  0005-0x28.frag  0006-0x1b.frag  0007-0x1c.frag  0008-0x28.frag  0009-0x1b.frag  0010-0x1c.frag  0011-0x28.frag  0012-0x1b.frag  0014-0x28.frag  0015-0x1b.frag  0017-0x28.frag  0018-0x1b.frag  0019-0x1c.frag  0020-0x28.frag  0021-0x1b.frag  0023-0x28.frag  0024-0x1b.frag  0026-0x28.frag  0027-0x1b.frag  0028-0x1c.frag  0029-0x28.frag  0030-0x1b.frag  0031-0x1c.frag  0032-0x28.frag  0033-0x1b.frag  0035-0x28.frag  0036-0x1b.frag  0038-0x28.frag  0039-0x1b.frag  0040-0x1c.frag  0041-0x28.frag  0042-0x1b.frag  0043-0x1c.frag  0044-0x28.frag  0045-0x1b.frag  0046-0x1c.frag  0047-0x28.frag  (+301 more)
fixtures/fragments/objects/: 0000-0x32.frag  0002-0x15.frag  0003-0x32.frag  0005-0x15.frag  0006-0x32.frag  0008-0x15.frag  0009-0x32.frag  0011-0x15.frag  0012-0x32.frag  0013-0x33.frag  0014-0x15.frag  0015-0x32.frag  0016-0x33.frag  0017-0x15.frag  0018-0x32.frag  0020-0x15.frag  0021-0x32.frag  0022-0x33.frag  0023-0x15.frag  0024-0x32.frag  0025-0x33.frag  0026-0x15.frag  0027-0x32.frag  0029-0x15.frag  0030-0x32.frag  0032-0x15.frag  0033-0x32.frag  0034-0x33.frag  0035-0x15.frag  (+8215 more)
src/: lib.rs
src/parser/: fragments.rs  mod.rs  strings.rs
tools/eq-archive/: Cargo.toml  README.md
tools/eq-archive/src/: main.rs
tools/s3d/: Cargo.toml
tools/wld-cli/: Cargo.toml  README.md
tools/wld-cli/src/: app.rs  event.rs  main.rs  ui.rs
tools/wld-cli/src/handlers/: mod.rs
tools/wld-cli/src/ui/: mod.rs
tools/wld-cli/src/ui/details/: mod.rs
tools/wld-cli/src/ui/filter/: mod.rs
tools/wld-cli/src/ui/list/: mod.rs
(+80 files in other folders)
