[package]
name = "libeq"
version = "0.4.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"
description = "Libraries and tools for working with EverQuest game data"
repository = "https://github.com/cjab/eq_wld"
readme = "README.md"
keywords = ["everquest", "eq", "wld", "loader"]
categories = ["game-development", "graphics", "parsing", "rendering::data-formats"]
license = "MIT"

[workspace]
members = ["crates/*", "tools/*"]

[dependencies]
libeq_wld = { path = "crates/libeq_wld", version = "0.3.0", optional = true }
libeq_archive = { path = "crates/libeq_archive", version = "0.4.0", optional = true }

[features]
default = ["wld", "archive"]
wld = ["libeq_wld"]
archive = ["libeq_archive"]
