[package]
name = "libeq_wld"
version = "0.2.1"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2021"
description = "An Everquest .wld file loader"
repository = "https://github.com/cjab/eq_wld"
readme = "README.md"
keywords = ["everquest", "eq", "wld", "loader"]
categories = ["game-development", "graphics", "parsing", "rendering::data-formats"]
license = "MIT"

[dependencies]
log = "0.4.14"
env_logger = "0.9"
nom = "7.1.1"
num-traits = "0.2"
num-derive = "0.3"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
