[package]
name = "libeq_wld"
version = "0.3.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"
description = "An Everquest .wld file loader"
repository = "https://github.com/cjab/eq_wld"
readme = "README.md"
keywords = ["everquest", "eq", "wld", "loader"]
categories = ["game-development", "graphics", "parsing", "rendering::data-formats"]
license = "MIT"

[dependencies]
log = "0.4.14"
env_logger = "0.9"
nom = "8.0.0"
num-traits = "0.2"
num-derive = "0.4.2"
encoding_rs = "0.8"
itertools = "0.10.3"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
