[package]
name = "libeq_wld"
version = "0.3.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"
description = "An Everquest .wld file loader"
repository = "https://github.com/cjab/eq_wld"
readme = "README.md"
keywords = ["everquest", "eq", "wld", "loader"]
categories = ["game-development", "graphics", "parsing", "rendering::data-formats"]
license = "MIT"

[dependencies]
nom.workspace = true
num-traits = "0.2"
num-derive = "0.4.2"
encoding_rs = "0.8"
itertools = "0.14.0"
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
