[package]
name = "eq-archive"
version = "0.4.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"
description = "Create and extract EverQuest .s3d archives"

[[bin]]
name = "eq-archive"
path = "src/main.rs"
test = false

[dependencies]
libeq_archive = { path = "../../crates/libeq_archive", version = "0.4.0" }
clap = { version = "4.5", features = ["derive"] }
