[package]
name = "wld-cli"
version = "0.4.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"

[[bin]]
name = "wld-cli"
path = "src/main.rs"
test = false

[dependencies]
libeq_wld = { path = "../../crates/libeq_wld", version = "0.3.0", features = ["serde"] }
libeq_archive = { path = "../../crates/libeq_archive", version = "0.4.0" }
clap = { version = "4.5", features = ["derive"] }
colorful = "0.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
hexyl = "0.16.0"
ansi-to-tui = "8.0.0"
serde_json = "1.0"
ron = "0.12"
