[package]
name = "wld-cli"
version = "0.4.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2024"

[[bin]]
name = "wld-cli"
path = "src/main.rs"
test = false

[dependencies]
libeq_wld = { workspace = true, features = ["serde"] }
libeq_archive.workspace = true
clap.workspace = true
ratatui = "0.30.0"
crossterm = "0.29.0"
hexyl = "0.16.0"
ansi-to-tui = "8.0.0"
serde_json = "1.0"
ron = "0.12"
